--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,7 @@
       </div>
 
       <div class="glassCard">
-        <form action="/result.html" method="POST">
+        <form action="/predict" method="POST">
 
           <div class="row" style="grid-template-columns:1fr 1fr; gap:20px;">
             <div>
@@ -79,4 +79,5 @@
   </div>
 </section>
 {% endblock %}
+
 
